--- a/index.html
+++ b/index.html
@@ -8,6 +8,72 @@
     <link rel="stylesheet" href="./resources/styles/styles.css" type="text/css">
 </head>
 <body>
+<!-- HEADER -->
+<header class="header">
+    <div class="container">
+        <nav class="navbar">
+            <div class="navbar__logo">
+                <img src="./resources/images/logo-white.png" alt="Tortoiseshell Optics Logo">
+                <span>Tortoiseshell Optics</span>
+            </div>
+            <ul class="navbar__nav__list">
+                <li class="navbar__nav__list__item">Services</li>
+                <li class="navbar__nav__list__item">Products</li>
+                <li class="navbar__nav__list__item">Contact</li>
+            </ul>
+        </nav>
+        <div class="header__title">
+            <span class="header__title__text">Don't just look, see.</span>
+        </div>
+    </div>
+</header>
 
+<!-- MAIN CONTENT -->
+<main class="main container">
+    <div class="main__icons">
+        <div class="main__icons__item">
+            <img src="./resources/images/paper-icon.png" alt="Paper icon" class="main__icons__item__image">
+            <p class="main__icons__item__title">Comprehensive Exams</p>
+        </div>
+        <div class="main__icons__item">
+            <img src="./resources/images/paper-icon.png" alt="Paper icon" class="main__icons__item__image">
+            <p class="main__icons__item__title">Comprehensive Exams</p>
+        </div>
+        <div class="main__icons__item">
+            <img src="./resources/images/paper-icon.png" alt="Paper icon" class="main__icons__item__image">
+            <p class="main__icons__item__title">Comprehensive Exams</p>
+        </div>
+    </div>
+    <div class="main__info">
+        <div class="main__info__item">
+            <div class="main__info__item__title">
+                <span>Philosophy</span>
+            </div>
+            <div class="main__info__item__text">
+                <span>Over 75% of our brains are dedicated to one sense: vision.
+                    We believe everyone deserves to see the world, not matter what.
+                    That’s why we offer eye exams, custom fittings, and quick delivery at a low cost.
+                    It’s your vision that makes ours.</span>
+            </div>
+        </div>
+        <div class="main__info__item">
+            <div class="main__info__item__title">
+                <span>Appointments</span>
+            </div>
+            <div class="main__info__item__text">
+                <span>Schedule an appointment by calling us at (312) 654-0987.
+                    We’re open Tuesday - Saturday, 9AM - 6PM.</span>
+            </div>
+        </div>
+    </div>
+</main>
+
+<!-- FOOTER -->
+<footer class="footer container">
+    <div class="footer__content">
+        <img src="./resources/images/logo-black.png" alt="Black logo">
+        <span>Copyright Tortoiseshell Optics</span>
+    </div>
+</footer>
 </body>
 </html>
