--- a/index.html
+++ b/index.html
@@ -29,48 +29,41 @@
 </header>
 
 <!-- MAIN CONTENT -->
-<main class="main container">
-    <div class="main__icons">
+<main class="main">
+    <div class="main__icons container">
         <div class="main__icons__item">
             <img src="./resources/images/paper-icon.png" alt="Paper icon" class="main__icons__item__image">
-            <p class="main__icons__item__title">Comprehensive Exams</p>
+            <p>Comprehensive Exams</p>
         </div>
         <div class="main__icons__item">
-            <img src="./resources/images/paper-icon.png" alt="Paper icon" class="main__icons__item__image">
-            <p class="main__icons__item__title">Comprehensive Exams</p>
+            <img src="./resources/images/ruler-icon.png" alt="Paper icon" class="main__icons__item__image">
+            <p>Custom fittings</p>
         </div>
         <div class="main__icons__item">
-            <img src="./resources/images/paper-icon.png" alt="Paper icon" class="main__icons__item__image">
-            <p class="main__icons__item__title">Comprehensive Exams</p>
+            <img src="./resources/images/truck-icon.png" alt="Paper icon" class="main__icons__item__image">
+            <p>Fast Delivery</p>
         </div>
     </div>
-    <div class="main__info">
+
+    <div class="main__info container">
         <div class="main__info__item">
-            <div class="main__info__item__title">
-                <span>Philosophy</span>
-            </div>
-            <div class="main__info__item__text">
-                <span>Over 75% of our brains are dedicated to one sense: vision.
-                    We believe everyone deserves to see the world, not matter what.
-                    That’s why we offer eye exams, custom fittings, and quick delivery at a low cost.
-                    It’s your vision that makes ours.</span>
-            </div>
+            <span class="main__info__item__title">Philosophy</span>
+            <p>Over 75% of our brains are dedicated to one sense: vision.
+                We believe everyone deserves to see the world, not matter what.
+                That’s why we offer eye exams, custom fittings, and quick delivery at a low cost.
+                It’s your vision that makes ours.</p>
         </div>
         <div class="main__info__item">
-            <div class="main__info__item__title">
-                <span>Appointments</span>
-            </div>
-            <div class="main__info__item__text">
-                <span>Schedule an appointment by calling us at (312) 654-0987.
-                    We’re open Tuesday - Saturday, 9AM - 6PM.</span>
-            </div>
+            <span class="main__info__item__title">Appointments</span>
+            <p>Schedule an appointment by calling us at (312) 654-0987.
+                We’re open Tuesday - Saturday, 9AM - 6PM.</p>
         </div>
     </div>
 </main>
 
 <!-- FOOTER -->
-<footer class="footer container">
-    <div class="footer__content">
+<footer class="footer">
+    <div class="footer__content container">
         <img src="./resources/images/logo-black.png" alt="Black logo">
         <span>Copyright Tortoiseshell Optics</span>
     </div>
