Styling smaller screens

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
                 <span>Tortoiseshell Optics</span>
             </div>
             <ul class="navbar__nav__list">
-                <li class="navbar__nav__list__item">Services</li>
-                <li class="navbar__nav__list__item">Products</li>
-                <li class="navbar__nav__list__item">Contact</li>
+                <li class="navbar__nav__list__item nav-small">Menu</li>
+                <li class="navbar__nav__list__item nav-big">Services</li>
+                <li class="navbar__nav__list__item nav-big">Products</li>
+                <li class="navbar__nav__list__item nav-big">Contact</li>
             </ul>
         </nav>
         <div class="header__title">
