--- a/index.html
+++ b/index.html
@@ -8,6 +8,65 @@
     <link rel="stylesheet" href="./resources/styles/styles.css" type="text/css">
 </head>
 <body>
+<!-- HEADER -->
+<header>
+    <nav class="container">
+        <div>
+            <img src="./resources/images/logo-white.png" alt="Tortoiseshell Optics Logo">
+            <span class="brand">Tortoiseshell Optics</span>
+        </div>
+        <div class="menu">
+            <ul>
+                <li>Services</li>
+                <li>Products</li>
+                <li>Contact</li>
+            </ul>
+            <ul class="collapsed-menu">
+                <li>Menu</li>
+            </ul>
+        </div>
+    </nav>
+    <div class="title-container container">
+        <span class="title">DON'T JUST LOOK, SEE.</span>
+    </div>
+</header>
 
+<!-- SERVICES -->
+<section class="services container">
+    <div class="service">
+        <img class="paper-icon" src="./resources/images/paper-icon.png" alt="Paper icon">
+        <p>Comprehensive Exams</p>
+    </div>
+    <div class="service">
+        <img src="./resources/images/ruler-icon.png" alt="Ruler icon">
+        <p>Custom Fittings</p>
+    </div>
+    <div class="service">
+        <img src="./resources/images/truck-icon.png" alt="Truck icon">
+        <p>Fast Delivery</p>
+    </div>
+</section>
+
+<!-- INFO -->
+<section class="info container">
+    <div class="item">
+        <h3>PHILOSOPHY</h3>
+        <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not
+            matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your
+            vision that makes ours.</p>
+    </div>
+    <div class="item">
+        <h3>APPOINTMENTS</h3>
+        <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
+    </div>
+</section>
+
+<!-- FOOTER -->
+<footer>
+    <div class="footer-container container">
+        <img src="./resources/images/logo-black.png" alt="Logo black">
+        <span>Copyright Tortoiseshell Optics</span>
+    </div>
+</footer>
 </body>
 </html>
